<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spectrogram</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_spectro">Spectrogram</string>
    <string name="library">Library</string>
    <string name="record">Record</string>
    <string name="settings">Settings</string>
    <string name="pref_colourmap">Spectrogram colour map</string>
    <string name="pref_colourmap_default">0</string>
    <string name="pref_landscape">Lock landscape orientation</string>
    <string name="resume_desc">Resume scrolling</string>
    <string name="pref_contrast">Spectrogram contrast</string>
    <string name="pref_contrast_summary">Adjust spectrogram contrast/sensitivity</string>
    <string name="pref_contrast_default">0.5</string>
    <string name="pref_contrast_message">Slide to the right to increase contrast and reduce amplitude sensitivity, or to the left to increase sensitivity but reduce contrast.</string>
    <string name="pref_sample_rate_default">16000</string>
    <string name="pref_sample_rate">Sample rate</string>
    <string name="pref_samples_window">Samples per window</string>
    <string name="pref_samples_window_default">300</string>
    <string name="pref_audio_data_title">Audio data</string>
    <string name="pref_display_title">Display</string>
    <string name="pref_captured_audio_title">Captured audio</string>
    <string name="pref_overfilter">Overfilter audio captures</string>
    <string name="pref_overfilter_summary">Automatically overfilter audio clips before they are saved to disk</string>

</resources>
