<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 <CheckBoxPreference
        android:key="pref_portrait"
        android:title="@string/pref_portrait"
       	android:defaultValue="false" />

<ListPreference
        android:key="pref_colourmap"
        android:title="@string/pref_colourmap"
        android:dialogTitle="@string/pref_colourmap"
        android:entries="@array/pref_colourmap_entries"
        android:entryValues="@array/pref_colourmap_values"
        android:defaultValue="@string/pref_colourmap_default" />

<net.jayschwa.android.preference.SliderPreference
    	android:key="pref_contrast"
    	android:title="@string/pref_contrast"
    	android:summary="@string/pref_contrast_summary"
    	android:defaultValue="@string/pref_contrast_default"
    	android:dialogMessage="@string/pref_contrast_message" />
</PreferenceScreen>
